--- a/ct-lang/Cargo.toml
+++ b/ct-lang/Cargo.toml
@@ -14,6 +14,5 @@ enum_glob_use = "deny"
 
 [dependencies]
 anyhow = "1.0.83"
-nom = "7.1.3"
-regex = "1.10.4"
+itertools = "0.13.0"
 thiserror = "1.0.60"
