--- a/ct-lang.cabal
+++ b/ct-lang.cabal
@@ -61,7 +61,8 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  MyLib
+    exposed-modules:
+        CTLang.AST
 
     -- Modules included in this library but not exported.
     -- other-modules:
