No idea what I am doing

--- a/ct-lang.cabal
+++ b/ct-lang.cabal
@@ -63,6 +63,7 @@ library
     -- Modules exported by the library.
     exposed-modules:
         CTLang.AST
+        CTLang.Eval
 
     -- Modules included in this library but not exported.
     -- other-modules:
