--- a/ct-lang.cabal
+++ b/ct-lang.cabal
@@ -72,7 +72,7 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.2.1
+    build-depends: base ^>=4.18.2.1, containers ^>= 0.6.7
 
     -- Directories containing source files.
     hs-source-dirs:   src
